tests/error/linear_errors/implicit_drop_in_match3.err
Error: Drop violation (at $FILE:11:9)
   | 
 9 | 
10 | @compile_guppy
11 | def main(e: LinearEnum @owned) -> None: # pyright: ignore[reportInvalidTypeForm]
   |          ^^^^^^^^^^^^^^^^^^^^ Variable `e` with non-droppable type `LinearEnum` is leaked

Help: Make sure that `e` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
